// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NodeBreadcrumbs renders no node breadcrumbs if node cant be found 1`] = `
<div
  className="breadcrumbs"
>
  <div
    className="breadcrumb breadcrumb--is-icon"
  >
    <a
      onClick={[Function]}
      style={Object {}}
    >
      <svg
        aria-label="product-servers icon"
        className="css-zgvqkl"
        height={24}
        preserveAspectRatio="xMinYMin meet"
        role="img"
        viewBox="0 0 24 24"
        width={24}
      >
        <use
          xlinkHref="#product-servers"
        />
      </svg>
    </a>
  </div>
  <div
    className="breadcrumb breadcrumb--is-caret"
  >
    <svg
      aria-label="system-caret-right icon"
      className="css-1vunjz0"
      height={16}
      preserveAspectRatio="xMinYMin meet"
      role="img"
      viewBox="0 0 16 16"
      width={16}
    >
      <use
        xlinkHref="#system-caret-right"
      />
    </svg>
  </div>
  <div
    className="breadcrumb"
  >
    <div
      className="breadcrumb__content breadcrumb__content--text"
    >
      <a
        onClick={[Function]}
        style={Object {}}
      >
        Nodes
      </a>
    </div>
  </div>
</div>
`;

exports[`NodeBreadcrumbs renders no unitID breadcrumbs without nodeID 1`] = `
<div
  className="breadcrumbs"
>
  <div
    className="breadcrumb breadcrumb--is-icon"
  >
    <a
      onClick={[Function]}
      style={Object {}}
    >
      <svg
        aria-label="product-servers icon"
        className="css-zgvqkl"
        height={24}
        preserveAspectRatio="xMinYMin meet"
        role="img"
        viewBox="0 0 24 24"
        width={24}
      >
        <use
          xlinkHref="#product-servers"
        />
      </svg>
    </a>
  </div>
  <div
    className="breadcrumb breadcrumb--is-caret"
  >
    <svg
      aria-label="system-caret-right icon"
      className="css-1vunjz0"
      height={16}
      preserveAspectRatio="xMinYMin meet"
      role="img"
      viewBox="0 0 16 16"
      width={16}
    >
      <use
        xlinkHref="#system-caret-right"
      />
    </svg>
  </div>
  <div
    className="breadcrumb"
  >
    <div
      className="breadcrumb__content breadcrumb__content--text"
    >
      <a
        onClick={[Function]}
        style={Object {}}
      >
        Nodes
      </a>
    </div>
  </div>
</div>
`;

exports[`NodeBreadcrumbs renders with node breadcrumbs 1`] = `
<div
  className="breadcrumbs"
>
  <div
    className="breadcrumb breadcrumb--is-icon"
  >
    <a
      onClick={[Function]}
      style={Object {}}
    >
      <svg
        aria-label="product-servers icon"
        className="css-zgvqkl"
        height={24}
        preserveAspectRatio="xMinYMin meet"
        role="img"
        viewBox="0 0 24 24"
        width={24}
      >
        <use
          xlinkHref="#product-servers"
        />
      </svg>
    </a>
  </div>
  <div
    className="breadcrumb breadcrumb--is-caret"
  >
    <svg
      aria-label="system-caret-right icon"
      className="css-1vunjz0"
      height={16}
      preserveAspectRatio="xMinYMin meet"
      role="img"
      viewBox="0 0 16 16"
      width={16}
    >
      <use
        xlinkHref="#system-caret-right"
      />
    </svg>
  </div>
  <div
    className="breadcrumb"
  >
    <div
      className="breadcrumb__content breadcrumb__content--text"
    >
      <a
        onClick={[Function]}
        style={Object {}}
      >
        Nodes
      </a>
    </div>
  </div>
  <div
    className="breadcrumb breadcrumb--is-caret"
  >
    <svg
      aria-label="system-caret-right icon"
      className="css-1vunjz0"
      height={16}
      preserveAspectRatio="xMinYMin meet"
      role="img"
      viewBox="0 0 16 16"
      width={16}
    >
      <use
        xlinkHref="#system-caret-right"
      />
    </svg>
  </div>
  <div
    className="breadcrumb"
  >
    <div
      className="breadcrumb__content breadcrumb__content--text"
    >
      <a
        onClick={[Function]}
        style={Object {}}
      >
        foo.bar.baz
      </a>
    </div>
  </div>
</div>
`;

exports[`NodeBreadcrumbs renders with taskID breadcrumbs 1`] = `
<div
  className="breadcrumbs"
>
  <div
    className="breadcrumb breadcrumb--is-icon"
  >
    <a
      onClick={[Function]}
      style={Object {}}
    >
      <svg
        aria-label="product-servers icon"
        className="css-zgvqkl"
        height={24}
        preserveAspectRatio="xMinYMin meet"
        role="img"
        viewBox="0 0 24 24"
        width={24}
      >
        <use
          xlinkHref="#product-servers"
        />
      </svg>
    </a>
  </div>
  <div
    className="breadcrumb breadcrumb--is-caret"
  >
    <svg
      aria-label="system-caret-right icon"
      className="css-1vunjz0"
      height={16}
      preserveAspectRatio="xMinYMin meet"
      role="img"
      viewBox="0 0 16 16"
      width={16}
    >
      <use
        xlinkHref="#system-caret-right"
      />
    </svg>
  </div>
  <div
    className="breadcrumb"
  >
    <div
      className="breadcrumb__content breadcrumb__content--text"
    >
      <a
        onClick={[Function]}
        style={Object {}}
      >
        Nodes
      </a>
    </div>
  </div>
  <div
    className="breadcrumb breadcrumb--is-caret"
  >
    <svg
      aria-label="system-caret-right icon"
      className="css-1vunjz0"
      height={16}
      preserveAspectRatio="xMinYMin meet"
      role="img"
      viewBox="0 0 16 16"
      width={16}
    >
      <use
        xlinkHref="#system-caret-right"
      />
    </svg>
  </div>
  <div
    className="breadcrumb"
  >
    <div
      className="breadcrumb__content breadcrumb__content--text"
    >
      <a
        onClick={[Function]}
        style={Object {}}
      >
        My Task
      </a>
    </div>
  </div>
</div>
`;

exports[`NodeBreadcrumbs renders with unitID breadcrumbs 1`] = `
<div
  className="breadcrumbs"
>
  <div
    className="breadcrumb breadcrumb--is-icon"
  >
    <a
      onClick={[Function]}
      style={Object {}}
    >
      <svg
        aria-label="product-servers icon"
        className="css-zgvqkl"
        height={24}
        preserveAspectRatio="xMinYMin meet"
        role="img"
        viewBox="0 0 24 24"
        width={24}
      >
        <use
          xlinkHref="#product-servers"
        />
      </svg>
    </a>
  </div>
  <div
    className="breadcrumb breadcrumb--is-caret"
  >
    <svg
      aria-label="system-caret-right icon"
      className="css-1vunjz0"
      height={16}
      preserveAspectRatio="xMinYMin meet"
      role="img"
      viewBox="0 0 16 16"
      width={16}
    >
      <use
        xlinkHref="#system-caret-right"
      />
    </svg>
  </div>
  <div
    className="breadcrumb"
  >
    <div
      className="breadcrumb__content breadcrumb__content--text"
    >
      <a
        onClick={[Function]}
        style={Object {}}
      >
        Nodes
      </a>
    </div>
  </div>
  <div
    className="breadcrumb breadcrumb--is-caret"
  >
    <svg
      aria-label="system-caret-right icon"
      className="css-1vunjz0"
      height={16}
      preserveAspectRatio="xMinYMin meet"
      role="img"
      viewBox="0 0 16 16"
      width={16}
    >
      <use
        xlinkHref="#system-caret-right"
      />
    </svg>
  </div>
  <div
    className="breadcrumb"
  >
    <div
      className="breadcrumb__content breadcrumb__content--text"
    >
      <a
        onClick={[Function]}
        style={Object {}}
      >
        foo.bar.baz
      </a>
    </div>
  </div>
  <div
    className="breadcrumb breadcrumb--is-caret"
  >
    <svg
      aria-label="system-caret-right icon"
      className="css-1vunjz0"
      height={16}
      preserveAspectRatio="xMinYMin meet"
      role="img"
      viewBox="0 0 16 16"
      width={16}
    >
      <use
        xlinkHref="#system-caret-right"
      />
    </svg>
  </div>
  <div
    className="breadcrumb"
  >
    <div
      className="breadcrumb__content breadcrumb__content--text"
    >
      <a
        onClick={[Function]}
        style={Object {}}
      >
         
        <span
          className="green"
        >
          (
          All green
          )
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`NodeBreadcrumbs renders without breadcrumbs 1`] = `
<div
  className="breadcrumbs"
>
  <div
    className="breadcrumb breadcrumb--is-icon"
  >
    <a
      onClick={[Function]}
      style={Object {}}
    >
      <svg
        aria-label="product-servers icon"
        className="css-zgvqkl"
        height={24}
        preserveAspectRatio="xMinYMin meet"
        role="img"
        viewBox="0 0 24 24"
        width={24}
      >
        <use
          xlinkHref="#product-servers"
        />
      </svg>
    </a>
  </div>
  <div
    className="breadcrumb breadcrumb--is-caret"
  >
    <svg
      aria-label="system-caret-right icon"
      className="css-1vunjz0"
      height={16}
      preserveAspectRatio="xMinYMin meet"
      role="img"
      viewBox="0 0 16 16"
      width={16}
    >
      <use
        xlinkHref="#system-caret-right"
      />
    </svg>
  </div>
  <div
    className="breadcrumb"
  >
    <div
      className="breadcrumb__content breadcrumb__content--text"
    >
      <a
        onClick={[Function]}
        style={Object {}}
      >
        Nodes
      </a>
    </div>
  </div>
</div>
`;
